<resources>
    <string name="app_name">CallBackIt</string>

    <string name="privacyURL">"http://cherepanovk.ru/privacy_policy"</string>
    <string name="rateURL">"market://details?id=com.cherepanovky.callbackit"</string>
    <string name="url_error">Can\'t open this URL</string>

    <string name="hintDescription">Description</string>
    <string name="hintPhoneNumber">"Phone number"</string>
    <string name="hintContactName">"Contact name"</string>

    <string name="hintetValue">"Value"</string>

    <string name="tvAccount">"Google account"</string>
    <string name="tvSetGoogleAccount">"Add account"</string>
    <string name="btnLogOut">"Logout"</string>

    <string name="request_permissions">"This app needs to access the phone, otherwise it will not track calls. Click OK and select the action."</string>
    <string name="request_permissions_contacts">"This app needs to access the Contacts to define a contact name and your Google account (via Contacts). Click OK and select the action."</string>
    <string name="no_contacts_permissions">\"You need enable the permission for Contacts in your smartphone settings\"</string>
    <string name="title_activity_time_select">ActivityTimeSelect</string>
    <string name="ContactNameIsEmpty">"Contact name is empty!"</string>
    <string name="eventHasCreated">"Reminder was created"</string>
    <string name="eventHasDeleted">"Reminder was deleted"</string>
    <string name="eventHasUpdated">"Reminder was updated"</string>
    <string name="isAccountGranted">"Account added"</string>
    <string name="eventError">"Error. Reminder didn't created"</string>
    <string name="isListEventsEmpty">"Reminder list is empty"</string>
    <string name="isGoogleEventsEmpty">"Reminders with phone number not found"</string>
    <string name="isGoogleEventsDownloaded">"Reminders were downloaded"</string>
    <string name="noNetwork">"No network connection available."</string>
    <string name="messageProgressDialog">"Please, waiting..."</string>
    <string name="questionDeleteEvent">"Delete the reminder?"</string>
    <string name="answerYes">"Yes"</string>
    <string name="answerCancel">"Cancel"</string>

    <string name="titleEvent">"Reminder"</string>

    <string name="needGoogleAccount">"This app needs to access your Google account (via Contacts)."</string>
    <string name="needGooglePlay">"This app requires Google Play Services. Please install " +
        "Google Play Services on your device and relaunch this app."</string>
    <string name="headerMenutListEvent">"Select an action"</string>
    <string name="menuItemCall">"Call"</string>
    <string name="menuItemDelete">"Delete"</string>

    <string name="titleDelayDialog">"Snooze for:"</string>
    <string name="unitMinutes">"minutes"</string>
    <string name="unitHours">"hours"</string>
    <string name="unitDays">"days"</string>

    <string name="titleOptionalTimeDialog">"Specify the time"</string>


    <string name="btnCreateEvent">"Save"</string>
    <string name="btnCallEvent">"Call"</string>
    <string name="btnDeleteEvent">"Delete"</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="messageUseGoogleAccountDialog">"Do you want to use Google Calendar?"</string>
    <string name="btnNegativeGoogleAccountDialog">"No"</string>
    <string name="btnPositiveGoogleAccountDialog">"Yes"</string>
    <string name="messageNegativeAnswerGoogleCalendar">"You can add Google Account in the settings"</string>

    <string name="preference_file_key">"callbackit_preference"</string>
    <string name="logTAG">"CallBackLogTAG"</string>
    <string name="menuDrawlerMain">Home</string>
    <string name="menuDrawlerSettings">Settings</string>
    <string name="btnActionMonth">Month</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="rate">Rate us!</string>
    <string name="tracingParameters">Tracing parameters</string>
    <string name="incomingCalls">All incoming</string>
    <string name="outgoingingCalls">All outgoing</string>
    <string name="outgoingingCallsMissed">Unanswered outgoing</string>
    <string name="incomingCallsMissed">Missed incoming</string>
    <string name="btnOptionalTime">Free time</string>
    <string name="btnNotifHoldOver">Snooze</string>
    <string name="btnNotifCall">Call</string>
    <string name="textEmptyList">EMPTY LIST</string>
    <string name="textTapButton">Tap the button \"+\" to add or just call</string>

    <string name="notificationChannelName">Default channel</string>
    <string name="errorTryAgain">Error. Try again.</string>
    <string name="downloadDialogMessage">Do you want to download reminders from Google Calendar?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_ok_optional_time">OK</string>
    <string name="et_time_optional_time">Amount</string>
    <string name="btn_cancel_optional_time">Cancel</string>
    <string name="cb_save_to_list">Save to list</string>
    <string name="msg_empty_amount">Amount cannot be empty</string>
    <string name="popup_menu_item_delete">Delete</string>
    <string name="title_toolbar_settings">Settings</string>
    <string name="title_toolbar_reminder">Reminder</string>
    <string name="error_optional_time_dialog">Amount is empty</string>
    <string name="title_select_ringtone">Select ringtone for notifications:</string>
    <string name="notifications_settings">Notifications</string>
    <string name="text_tv_ringtone">Sound</string>
    <string name="btn_transition_name">btnSaveTransitionName</string>
    <string name="error_date">Date is less than current</string>
    <string name="error_time">Time is less than current</string>
    <string name="notification_new_call">a new call!</string>

    <string-array name="units_array">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

    <plurals name="plurals_minute">
        <item quantity="zero">%1$d minutes</item>
        <item quantity="one">%1$d minute</item>
        <item quantity="two">%1$d minutes</item>
        <item quantity="few">%1$d minutes</item>
        <item quantity="many">%1$d minutes</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <plurals name="plurals_hour">
        <item quantity="zero">%1$d hours</item>
        <item quantity="one">%1$d hour</item>
        <item quantity="two">%1$d hours</item>
        <item quantity="few">%1$d hours</item>
        <item quantity="many">%1$d hours</item>
        <item quantity="other">%1$d hours</item>
    </plurals>

    <plurals name="plurals_day">
        <item quantity="zero">%1$d days</item>
        <item quantity="one">%1$d day</item>
        <item quantity="two">%1$d days</item>
        <item quantity="few">%1$d days</item>
        <item quantity="many">%1$d days</item>
        <item quantity="other">%1$d days</item>
    </plurals>
</resources>
