<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:title="@string/menuDrawlerSettings"
            android:icon="@drawable/baseline_settings_white_24"/>

        <item
            android:id="@+id/rate"
            android:title="@string/rate"
            android:icon="@drawable/baseline_star_rate_white_24"/>
        <item
            android:id="@+id/privacy"
            android:title="@string/privacypolicy"
            android:icon="@drawable/baseline_lock_white_24"/>
        <item
            android:id="@+id/contact_by_email"
            android:title="@string/menu_contact_us"
            android:icon="@drawable/ic_email_black_24dp"/>
    </group>
</menu>